# smollama-py

./: README.md  pyproject.toml
smollama_py/: cli.py
smollama_py/public/: index.html  smollama.css
tests/: test_smollama_py.py
