[project]
name = "smollama-py"
version = "0.0.1"
description = "A python app to serve smOllama"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "eel"
]

[project.urls]
Homepage = "https://github.com/sukhbinder/smollama-py"
Changelog = "https://github.com/sukhbinder/smollama-py/releases"
Issues = "https://github.com/sukhbinder/smollama-py/issues"
CI = "https://github.com/sukhbinder/smollama-py/actions"

[project.scripts]
smollama-py = "smollama_py.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
